[package]
name = "gsdk"
description = "Rust SDK of the Gear network"
documentation = "https://docs.rs/gsdk"
categories = ["wasm", "api-bindings"]
keywords = ["gear", "api", "sdk"]
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
colored.workspace = true
derive_more.workspace = true
futures.workspace = true
gear-core = { workspace = true, features = ["std"] }
gear-core-errors.workspace = true
gsdk-codegen.workspace = true
hex.workspace = true
indexmap = { workspace = true, features = ["std"] }
jsonrpsee = { workspace = true, features = [ "http-client", "ws-client" ] }
log.workspace = true
parking_lot.workspace = true
serde_json = { workspace = true, features = [ "std" ] }
sp-core = { workspace = true, features = [ "std" , "full_crypto"] }
sp-runtime = { workspace = true, features = [ "std" ] }
subxt.workspace = true
thiserror.workspace = true
url.workspace = true
parity-scale-codec.workspace = true
intentionally-empty.workspace = true

[dev-dependencies]
gear-node-wrapper.workspace = true
tokio = { workspace = true, features = ["full"] }
demo-messenger.workspace = true
demo-fungible-token.workspace = true
demo-vec.workspace = true
demo-waiter = { workspace = true, features = ["std"] }

[build-dependencies]
gear-utils.workspace = true

[features]
testing = []
