[package]
name = "gstd-meta"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
scale-info = { version = "0.10.0", default-features = false, features = ["derive", "serde"] }
serde = { version = "1.0.127", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.66", default-features = false, features = ["alloc"] }

[profile.release]
lto = true
opt-level = 's'
