[package]
name = "gstd-meta"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2018"
license = "GPL-3.0"

[dependencies]
scale-info = { version = "1.0.0", default-features = false, features = ["derive", "serde"] }
serde_json = { version = "1.0.68", default-features = false, features = ["alloc"] }
