[package]
name = "gstd"
description = "Gear programs standard library"
keywords = ["gear", "std", "no-std", "wasm", "smart-contracts"]
categories = ["api-bindings"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
documentation = "https://docs.rs/gstd"

[dependencies]
galloc.workspace = true
gcore = { workspace = true, features = ["codec"] }
gstd-codegen = { path = "codegen" }
gear-core-errors.workspace = true
hashbrown.workspace = true
bs58 = { workspace = true, features = ["alloc"] }
hex = { workspace = true, features = ["alloc"] }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
primitive-types = { workspace = true, features = ["scale-info"] }
scale-info = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["alloc"] }

static_assertions.workspace = true

[features]
default = ["panic-handler"]
panic-handler = []
debug = ["galloc/debug", "gcore/debug"]
